# bucket-scrapper

./: .envrc  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config-continuous.yaml  config-scrapper.yml  flake.nix  lefthook.yaml  mise.toml  sample-config.yaml  test-parallel-listing.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
infra/docker/: Dockerfile  docker-bake.hcl  pre-install-root
mutants.out.old/: lock.json
scripts/: build-mocks  fetch.sh  play_job.sh  prepare.py  types.ts
src/: continuous.rs  lib.rs  main.rs  main_search.rs  matcher.rs  progress.rs  search_executor.rs
src/config/: loader.rs  mod.rs  path_formatter.rs  types.rs
src/pipeline/: http_writer.rs  mod.rs  observer.rs  orchestrator.rs  searcher.rs  streaming_writer.rs
src/s3/: checker.rs  client.rs  dns_cache.rs  mod.rs  parallel_lister.rs  streaming_downloader.rs  streaming_search_executor.rs  types.rs
src/s3/downloader/: download_orchestrator.rs  downloader.rs  mod.rs  processor.rs  s3_fetcher.rs  types.rs
src/search/: http_writer.rs  mod.rs  result_collector.rs  result_exporter.rs  searcher.rs  streaming_collector.rs  streaming_exporter.rs  streaming_writer.rs
src/utils/: character_counter.rs  date.rs  duration_parser.rs  memory_limited_allocator.rs  mod.rs  path_formatter.rs  pgm_visualizer.rs  proxy.rs  recap_html.rs  signal_handler.rs  structured_log.rs
tests/: README.md  debug_path_test.rs  docker-compose.yaml  fake_consolidation_e2e_test.rs  fake_consolidation_test.rs  integration_character_count_tests.rs  integration_compression_tests.rs  integration_end_to_end.rs  integration_multi_env_tests.rs  integration_service_volume_tests.rs  integration_test_setup.rs  production_e2e_tests.rs  s3_advanced_integration_tests.rs  s3_integration_tests.rs  s3_integration_tests_refactored.rs  s3_integration_tests_with_consolidator.rs  s3_integration_tests_with_continuous_consolidator.rs  s3_pagination_tests.rs  setup.rs  test_stream_searcher.rs
tests/mock_data/: config-compose.yaml  config.yaml
tests/mock_data/broken-input-001/consolidated/: int-app-consolidated.json
tests/mock_data/broken-input-001/inputs/: app-stg.json
tests/mock_data/broken-output-001/consolidated/: int-app-consolidated.json  int-web-consolidated.json  stg-app-consolidated.json  support-app-consolidated.json
tests/mock_data/broken-output-001/inputs/: app-stg.json  app-support.json
tests/mock_data/consolidated/: int-app-consolidated.json  stg-app-consolidated.json  support-app-consolidated.json  support-web-consolidated.json
tests/mock_data/inputs/: web-int.json  web-stg.json
tests/mock_data/line-return-001/consolidated/: int-app-consolidated.json  support-app-consolidated.json
tests/mock_data/line-return-001/inputs/: app-stg.json  app-support.json
tests/mocks/: config.yaml
tests/test_helpers/: assertions.rs  compression.rs  consolidator_runner.rs  dynamic_mock_generator.rs  factories.rs  fake_consolidation_setup.rs  fixtures.rs  mock_data_generator.rs  mock_data_populator.rs  mod.rs  multi_environment.rs  s3_file_displayer.rs  s3_operations.rs  setup.rs  simple_test.rs  test_consolidation.rs  test_environment.rs
(+7 files in other folders)
