# Location: Cargo.toml
[package]
name = "log-consolidator-checker-rust"
version = "0.1.0"
edition = "2021"
authors = ["Elie Bleton <elie.bleton@manomano.com>"]
description = "A tool to check that log consolidation in S3 has been done correctly"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
aws-config = "1.1.3"
aws-sdk-s3 = "1.12.0"
aws-types = "1.1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
crc32fast = "1.3"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
md5 = "0.7"
num_cpus = "1.16"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sys-info = "0.9"
tokio = { version = "1.33", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
zstd = { version = "0.13.2" , features = ["experimental"] }
flate2 = "1.0"
signal-hook = "0.3.17"
human_bytes = "0.4.3"
dashmap = "6.1.0"
rand = "0.9.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false
