# Location: Cargo.toml

[dependencies]
anyhow = "1.0"
bytes = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
aws-config = "1.1.3"
aws-sdk-s3 = "1.12.0"
aws-types = "1.1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.33", features = ["full"] }
tokio-util = { version = "0.7", features = ["full", "io"] }
flume = "0.11"
zstd = { version = "0.13.2", features = ["experimental"] }
backon = "1.4.0"
libc = "0.2"

# Ripgrep libraries for search functionality
grep-searcher = "0.1"
grep-regex = "0.1"

# HTTP client for REST API integration (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# DNS caching to reduce CoreDNS load
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
moka = { version = "0.12", features = ["future"] }
# AWS SDK HTTP client customization for DNS integration
aws-smithy-http-client = { version = "1.0", features = ["rustls-aws-lc"] }
aws-smithy-runtime-api = { version = "1.8", features = ["client"] }
aws-smithy-types = "1.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[package]
name = "bucket-scrapper"
version = "0.1.0"
edition = "2021"
authors = ["Elie Bleton <elie.bleton@manomano.com>", "Julien Dauliac <julien.dauliac@manomano.com>"]
description = "A high-performance tool for searching through S3 bucket contents using ripgrep"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false
incremental = true
debug = true

# Profiling profile: release optimizations + frame pointers for accurate stack traces.
# Build with: cargo build --profile profiling
[profile.profiling]
inherits = "release"
force-frame-pointers = true
